Fix bug with wrapping elements

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -12,6 +12,7 @@ body {
     margin: 0 auto;
     width: 75%;
     background: url('../../images/pattern-bg-desktop.png') no-repeat;
+    background-size: 100%;
     height: 100vh;
 }
 
@@ -79,6 +80,7 @@ body {
     margin-top: 5rem;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     box-shadow: 0px 0px 17px 0px rgba(0, 0, 0, 1);
 }
 
